<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/color_blue"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/color_grey" />

    <ImageView
        android:id="@+id/img_newcard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:scaleType="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/pos" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:lines="1"
            android:text="@string/tv_pos"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/logintip"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/qq_login" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/email_login" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/xinlan_login" />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >
        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/sign">
            
        </Button>  
         <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/login_later">
            
        </Button>  
      </LinearLayout>

</LinearLayout>